base.core/src/main/java/eapli/base/formulario/gramatica/GramaticaParser.java
// Generated from C:/Users/luism/Desktop/lei20_21_s4_2dl_4/base.core/src/main/java/eapli/base/formulario/gramatica\Gramatica.g4 by ANTLR 4.9.1
package eapli.base.formulario.gramatica;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, COMMENT=6, TIPOAUSENCIA=7, DEFINE=8, 
		SE=9, MENOR=10, MENORIGUAL=11, ENTAO=12, NAOVAZIO=13, VAZIO=14, ENVIAR_EMAIL=15, 
		COLABORADOR_REQUERENTE=16, JAN=17, FEB=18, MAR=19, APR=20, MAY=21, JUN=22, 
		JUL=23, AUG=24, SEP=25, OCT=26, NOV=27, DEC=28, INT4=29, DIGIT=30, NUMERO=31, 
		INT=32, NAME=33, SPACES=34, SEPARATOR=35;
	public static final int
		RULE_parseEspecificao = 0, RULE_parseValidacao = 1, RULE_instructionEspecificacao = 2, 
		RULE_instructionValidacao = 3, RULE_servico1dataInicioFimEspecificacao = 4, 
		RULE_servico1dataInicioFimValidacao = 5, RULE_servico1Justificacao = 6, 
		RULE_dataInicio = 7, RULE_dataFim = 8, RULE_justificacao = 9, RULE_enviar_email = 10, 
		RULE_corpo_email = 11, RULE_calcula = 12, RULE_date = 13, RULE_month = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"parseEspecificao", "parseValidacao", "instructionEspecificacao", "instructionValidacao", 
			"servico1dataInicioFimEspecificacao", "servico1dataInicioFimValidacao", 
			"servico1Justificacao", "dataInicio", "dataFim", "justificacao", "enviar_email", 
			"corpo_email", "calcula", "date", "month"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'JUSTIFICADA'", "'*'", "'/'", "'+'", "'-'", null, null, "'DEFINE'", 
			"'SE'", "'MENOR'", "'MENORIGUAL'", "'ENTAO'", "'NAOVAZIO'", "'VAZIO'", 
			"'ENVIAR EMAIL'", "'COLABORADOR REQUERENTE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "COMMENT", "TIPOAUSENCIA", "DEFINE", 
			"SE", "MENOR", "MENORIGUAL", "ENTAO", "NAOVAZIO", "VAZIO", "ENVIAR_EMAIL", 
			"COLABORADOR_REQUERENTE", "JAN", "FEB", "MAR", "APR", "MAY", "JUN", "JUL", 
			"AUG", "SEP", "OCT", "NOV", "DEC", "INT4", "DIGIT", "NUMERO", "INT", 
			"NAME", "SPACES", "SEPARATOR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseEspecificaoContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GramaticaParser.EOF, 0); }
		public List<InstructionEspecificacaoContext> instructionEspecificacao() {
			return getRuleContexts(InstructionEspecificacaoContext.class);
		}
		public InstructionEspecificacaoContext instructionEspecificacao(int i) {
			return getRuleContext(InstructionEspecificacaoContext.class,i);
		}
		public ParseEspecificaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseEspecificao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterParseEspecificao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitParseEspecificao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitParseEspecificao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseEspecificaoContext parseEspecificao() throws RecognitionException {
		ParseEspecificaoContext _localctx = new ParseEspecificaoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parseEspecificao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SE) | (1L << ENVIAR_EMAIL) | (1L << NAME))) != 0)) {
				{
				{
				setState(30);
				instructionEspecificacao();
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseValidacaoContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GramaticaParser.EOF, 0); }
		public List<InstructionValidacaoContext> instructionValidacao() {
			return getRuleContexts(InstructionValidacaoContext.class);
		}
		public InstructionValidacaoContext instructionValidacao(int i) {
			return getRuleContext(InstructionValidacaoContext.class,i);
		}
		public ParseValidacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseValidacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterParseValidacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitParseValidacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitParseValidacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseValidacaoContext parseValidacao() throws RecognitionException {
		ParseValidacaoContext _localctx = new ParseValidacaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parseValidacao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(38);
				instructionValidacao();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionEspecificacaoContext extends ParserRuleContext {
		public Enviar_emailContext enviar_email() {
			return getRuleContext(Enviar_emailContext.class,0);
		}
		public Servico1dataInicioFimEspecificacaoContext servico1dataInicioFimEspecificacao() {
			return getRuleContext(Servico1dataInicioFimEspecificacaoContext.class,0);
		}
		public Servico1JustificacaoContext servico1Justificacao() {
			return getRuleContext(Servico1JustificacaoContext.class,0);
		}
		public InstructionEspecificacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructionEspecificacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterInstructionEspecificacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitInstructionEspecificacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitInstructionEspecificacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionEspecificacaoContext instructionEspecificacao() throws RecognitionException {
		InstructionEspecificacaoContext _localctx = new InstructionEspecificacaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instructionEspecificacao);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENVIAR_EMAIL:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				enviar_email();
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				servico1dataInicioFimEspecificacao();
				}
				break;
			case SE:
				enterOuterAlt(_localctx, 3);
				{
				setState(48);
				servico1Justificacao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionValidacaoContext extends ParserRuleContext {
		public Servico1dataInicioFimValidacaoContext servico1dataInicioFimValidacao() {
			return getRuleContext(Servico1dataInicioFimValidacaoContext.class,0);
		}
		public InstructionValidacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructionValidacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterInstructionValidacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitInstructionValidacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitInstructionValidacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionValidacaoContext instructionValidacao() throws RecognitionException {
		InstructionValidacaoContext _localctx = new InstructionValidacaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instructionValidacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			servico1dataInicioFimValidacao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Servico1dataInicioFimEspecificacaoContext extends ParserRuleContext {
		public DataInicioContext dataInicio() {
			return getRuleContext(DataInicioContext.class,0);
		}
		public TerminalNode MENORIGUAL() { return getToken(GramaticaParser.MENORIGUAL, 0); }
		public DataFimContext dataFim() {
			return getRuleContext(DataFimContext.class,0);
		}
		public Servico1dataInicioFimEspecificacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_servico1dataInicioFimEspecificacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterServico1dataInicioFimEspecificacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitServico1dataInicioFimEspecificacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitServico1dataInicioFimEspecificacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Servico1dataInicioFimEspecificacaoContext servico1dataInicioFimEspecificacao() throws RecognitionException {
		Servico1dataInicioFimEspecificacaoContext _localctx = new Servico1dataInicioFimEspecificacaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_servico1dataInicioFimEspecificacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			dataInicio();
			setState(54);
			match(MENORIGUAL);
			setState(55);
			dataFim();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Servico1dataInicioFimValidacaoContext extends ParserRuleContext {
		public DataInicioContext dataInicio() {
			return getRuleContext(DataInicioContext.class,0);
		}
		public DataFimContext dataFim() {
			return getRuleContext(DataFimContext.class,0);
		}
		public Servico1dataInicioFimValidacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_servico1dataInicioFimValidacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterServico1dataInicioFimValidacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitServico1dataInicioFimValidacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitServico1dataInicioFimValidacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Servico1dataInicioFimValidacaoContext servico1dataInicioFimValidacao() throws RecognitionException {
		Servico1dataInicioFimValidacaoContext _localctx = new Servico1dataInicioFimValidacaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_servico1dataInicioFimValidacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			dataInicio();
			setState(58);
			dataFim();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Servico1JustificacaoContext extends ParserRuleContext {
		public Token tipoAusencia;
		public TerminalNode SE() { return getToken(GramaticaParser.SE, 0); }
		public TerminalNode ENTAO() { return getToken(GramaticaParser.ENTAO, 0); }
		public JustificacaoContext justificacao() {
			return getRuleContext(JustificacaoContext.class,0);
		}
		public TerminalNode NAOVAZIO() { return getToken(GramaticaParser.NAOVAZIO, 0); }
		public TerminalNode NAME() { return getToken(GramaticaParser.NAME, 0); }
		public Servico1JustificacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_servico1Justificacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterServico1Justificacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitServico1Justificacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitServico1Justificacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Servico1JustificacaoContext servico1Justificacao() throws RecognitionException {
		Servico1JustificacaoContext _localctx = new Servico1JustificacaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_servico1Justificacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(SE);
			setState(61);
			((Servico1JustificacaoContext)_localctx).tipoAusencia = match(NAME);
			setState(62);
			match(T__0);
			setState(63);
			match(ENTAO);
			setState(64);
			justificacao();
			setState(65);
			match(NAOVAZIO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataInicioContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GramaticaParser.NAME, 0); }
		public DataInicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataInicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDataInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDataInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDataInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataInicioContext dataInicio() throws RecognitionException {
		DataInicioContext _localctx = new DataInicioContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dataInicio);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataFimContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GramaticaParser.NAME, 0); }
		public DataFimContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataFim; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDataFim(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDataFim(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDataFim(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataFimContext dataFim() throws RecognitionException {
		DataFimContext _localctx = new DataFimContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_dataFim);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JustificacaoContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GramaticaParser.NAME, 0); }
		public JustificacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_justificacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterJustificacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitJustificacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitJustificacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JustificacaoContext justificacao() throws RecognitionException {
		JustificacaoContext _localctx = new JustificacaoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_justificacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enviar_emailContext extends ParserRuleContext {
		public TerminalNode ENVIAR_EMAIL() { return getToken(GramaticaParser.ENVIAR_EMAIL, 0); }
		public TerminalNode COLABORADOR_REQUERENTE() { return getToken(GramaticaParser.COLABORADOR_REQUERENTE, 0); }
		public Corpo_emailContext corpo_email() {
			return getRuleContext(Corpo_emailContext.class,0);
		}
		public Enviar_emailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enviar_email; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterEnviar_email(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitEnviar_email(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitEnviar_email(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Enviar_emailContext enviar_email() throws RecognitionException {
		Enviar_emailContext _localctx = new Enviar_emailContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_enviar_email);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(ENVIAR_EMAIL);
			setState(74);
			match(COLABORADOR_REQUERENTE);
			setState(75);
			corpo_email(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Corpo_emailContext extends ParserRuleContext {
		public Corpo_emailContext corpo_email() {
			return getRuleContext(Corpo_emailContext.class,0);
		}
		public TerminalNode NAME() { return getToken(GramaticaParser.NAME, 0); }
		public CalculaContext calcula() {
			return getRuleContext(CalculaContext.class,0);
		}
		public Corpo_emailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo_email; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterCorpo_email(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitCorpo_email(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitCorpo_email(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Corpo_emailContext corpo_email() throws RecognitionException {
		return corpo_email(0);
	}

	private Corpo_emailContext corpo_email(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Corpo_emailContext _localctx = new Corpo_emailContext(_ctx, _parentState);
		Corpo_emailContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_corpo_email, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(84);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(82);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new Corpo_emailContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_corpo_email);
						setState(78);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(79);
						match(NAME);
						}
						break;
					case 2:
						{
						_localctx = new Corpo_emailContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_corpo_email);
						setState(80);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(81);
						calcula(0);
						}
						break;
					}
					} 
				}
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
